deploy/kustomize/overlays/dev/patches/mcm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Never
